--- a/style.css
+++ b/style.css
@@ -49,13 +49,13 @@ span {
 }
 
 .overlay a:hover, .overlay a:focus {
-  color: cyan;
+  color: dodgerblue;
 }
 
 .overlay .closebutton {
   position: absolute;
   top: 25px;
-  right: 45px;
+  left: 45px;
   font-size: 60px;
 }
 
@@ -66,6 +66,11 @@ button {
   color: white;
   padding: 10px 15px;
   border: none;
+}
+
+span:hover {
+  color: dodgerblue;
+  transition: 1s;
 }
 
 #a {
@@ -99,24 +104,45 @@ button {
   color: white;
   height: 100vh;
   box-shadow: 10px 10px 8px #888888;
-  background-image: url(two.jpg);
-  background-attachment: scroll;
-  background-size: cover;
+  background-color: black;
 }
 
-.space {
+.container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  margin-left: 100px;
+  margin-right: 100px;
   text-align: center;
+  align-content: center;
   padding-top: 50px;
 }
 
-.list {
-  margin: 0 auto;
-  font-size: 40px;
+.container img {
+  width: 200px;
+  height: 200px;
 }
 
-li {
-  display: inline-block;
-  padding: 0px 140px;
+.container p {
+  padding: 100px;
+  padding-bottom: 20px;
+}
+
+.container h1 {
+  font-size: 50px;
+  padding-top: 10px;
+  font-family: oswald;
+}
+
+.box {
+  border: solid;
+  border-width: medium;
+  border-radius: 100px;
+  margin: 20px;
+  height: 110%;
+}
+
+.ilink {
+  padding: 20px;
 }
 
 #c {
@@ -130,13 +156,20 @@ li {
 
 .history {
   text-align: right;
-  padding-top: 150px;
-  padding-right: 50px;
+  padding-top: 200px;
+  padding-right: 100px;
 }
 
 .explain {
-  display: block;
   text-align: right;
   width: 300px;
-  padding-left: 80%;
+  padding-left: 76%;
+  padding-right: 100px;
+}
+
+footer {
+  font-family: 'Montserrat', sans-serif;
+  background-color: dodgerblue;
+  color: white;
+  padding: 40px 150px;
 }
