--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ span:hover {
 
 #a {
   height: 100vh;
-  background-image: url(lines.jpg);
+  background-image: url(homepod.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -105,15 +105,15 @@ span:hover {
 
 #b {
   color: white;
-  height: 115vh;
-  background-color: black;
+  height: 100vh;
+  background-color: lightgrey;
 }
 
 .container {
   display: grid;
   grid-template-columns: auto auto auto;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
   text-align: center;
   align-content: center;
   padding-top: 50px;
@@ -124,9 +124,14 @@ span:hover {
   height: 200px;
 }
 
+#img2 {
+  width: 350px;
+}
+
 .container p {
-  padding: 100px;
-  padding-bottom: 20px;
+  padding: 50px;
+  padding-bottom: 0px;
+  font-size: 18px;
 }
 
 .container h1 {
@@ -138,7 +143,9 @@ span:hover {
 .box {
   border: solid;
   border-width: medium;
-  border-radius: 100px;
+  border-color: black;
+  border-radius: 20px;
+  background-color: black;
   margin: 20px;
   height: 110%;
 }
@@ -151,47 +158,13 @@ span:hover {
 }
 
 .ilink:hover {
-  background-color: dodgerblue;
+  background-color: lightgrey;
   transition: 1s;
 }
 
 a {
   text-decoration: none;
-  color: white
-}
-
-#c {
-  height: 600px;
-  background-image: url(board.jpg);
-  background-position: center;
-  background-size: cover;
-  color: black;
-}
-
-.history {
-  position: absolute;
-  right: 0;
-  padding-top: 200px;
-  padding-right: 50px;
-}
-
-.explain {
-  position: absolute;
-  right: 0;
-  padding-top: 240px;
-  text-align: right;
-  width: 400px;
-  padding-right: 50px;
-}
-
-.hlink {
-  text-decoration: none;
-  position: absolute;
-  right: 0;
-  padding-top: 400px;
-  text-align: right;
-  width: 400px;
-  padding-right: 50px;
+  color: white;
 }
 
 .contact {
@@ -203,8 +176,6 @@ a {
   color: dodgerblue;
   font-size: 50px;
 }
-
-
 
 footer {
   background-color: dodgerblue;
@@ -231,12 +202,6 @@ footer {
 }
 
 @media only screen and (max-width: 1200px) {
-  .explain {
-    width: 200px;
-  }
-  .hink {
-    padding-top: 1200px;
-  }
   .contact{
     padding: 50px;
   }
@@ -251,39 +216,5 @@ footer {
 @media only screen and (max-width: 1000px) {
   .description {
     font-size: 16px;
-  }
-  #c {
-    background-image: none;
-    background-color: white;
-  }
-
-  .history {
-    text-align: center;
-    padding-top: 200px;
-    padding-right: 0px;
-    padding-left: 0px;
-    left: 0;
-    right: 0;
-
-  }
-
-  .explain {
-    text-align: center;
-    padding-top: 400px;
-    padding-right: 0px;
-    padding-left: 0px;
-    left: auto;
-    right: auto;
-  }
-
-  .hlink {
-    text-decoration: none;
-    text-align: center;
-    padding-top: 800px;
-    padding-right: 0px;
-    padding-left: 0px;
-    left: auto;
-    right: auto;
-    color: black;
   }
 }
