--- a/style.css
+++ b/style.css
@@ -188,6 +188,10 @@ a {
   font-size: 35px;
 }
 
+.hlink {
+  color: black;
+}
+
 .contact {
   text-align: center;
   padding: 80px;
@@ -264,6 +268,7 @@ footer {
     margin: 50px;
     border-radius: 100px;
     background-color: black;
+    color: white;
   }
 
   .hlink:hover {
